# new-chip8-emulator

./: .CMakeLists.txt.un~  .Makefile.un~  .build.sh.un~  .configure.sh.un~  .create.sh.un~  .debug.sh.un~  .run.sh.un~  CMakeLists.txt  configure.sh  debug.sh  generate.sh  old_makefile  pepsi  run.sh
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  pepsi
include/: .add.h.un~  .chip8.h.un~  .instructions.h.un~  chip8.h  instructions.h  libsdl.h
src/: .add.c.un~  .init.c.un~  .instructions.c.un~  .main.c.un~  chip8.c  init.c  instructions.c  libsdl.c  main.c
